libs/pavex_cli/tests/ui_tests/singletons_must_be_send/expectations/stderr.txt
Error: 
  × `app::NonSendSingleton` does not implement the `core::marker::Send` trait.
    ╭─[src/lib.rs:18:1]
 18 │ pub fn blueprint() -> AppBlueprint {
 19 │     AppBlueprint::new().constructor(f!(crate::NonSendSingleton::new), Lifecycle::Singleton)
    ·                                     ────────────────┬───────────────
    ·                                                     ╰── The singleton's constructor was registered here
 20 │ }
    ╰────